--- a/servlet2/src/main/webapp/WEB-INF/web.xml
+++ b/servlet2/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 	<display-name>HttpServletRequest</display-name>
 	<servlet>
 		<servlet-name>myservlet</servlet-name>
-		<servlet-class>com.ovmedia.servlet.ServletRequestExample</servlet-class>
+		<servlet-class>main.java.com.ovmedia.servlet.ServletRequestExample</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>myservlet</servlet-name>
@@ -15,7 +15,7 @@
 
 	<servlet>
 		<servlet-name>principalServlet</servlet-name>
-		<servlet-class>com.ovmedia.servlet.UserPrincipal</servlet-class>
+		<servlet-class>main.java.com.ovmedia.servlet.UserPrincipal</servlet-class>
 		<security-role-ref>
 	    <description>Principal Testing</description>
 		<role-name>Mgr</role-name>
