--- a/servlet2/.classpath
+++ b/servlet2/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="/Users/guentherhaslbeck/javaprojectframework/servlet2/extjars/jtwig-core-3.1.0.jar"/>
 	<classpathentry kind="lib" path="/Users/guentherhaslbeck/javaprojectframework/servlet2/extjars/jtwig-core-3.0.0.jar"/>
 	<classpathentry kind="lib" path="/Users/guentherhaslbeck/javaprojectframework/servlet2/extjars/jtwig-spring-3.0.0.jar"/>
+	<classpathentry kind="lib" path="/Users/guentherhaslbeck/javaprojectframework/servlet2/extjars/log4j-1.2.17.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
