changes in pom to bring templates in right position

--- a/servlet2/pom.xml
+++ b/servlet2/pom.xml
@@ -70,6 +70,10 @@
 			<resource>
 				<directory>src/view</directory>
 			</resource>
+        <resource>
+            <directory>src/view</directory>
+            <targetPath>${project.build.directory}/${project.build.finalName}/WEB-INF/templates/src/view</targetPath>
+        </resource>
 		</resources>
 
 	</build>
